<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/recipe_detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="eu.javimar.bakingapp.view.RecipeDetailViewFragment" />

</RelativeLayout>