<resources>

    <string name="app_name">Baking app</string>

    <!-- ERROR -->
    <string name="no_internet_connection">There is no Internet connection</string>
    <string name="no_recipes">Couldn\'t load the recipes</string>

    <!-- CONTENT DESCRIPTION STRINGS -->
    <string name="cd_baking_image">Image of the baking app</string>
    <string name="cd_recipe_listing_image">Image used on the initial recipe listing</string>
    <string name="cd_play_button">Image for the play button in the video player</string>
    <string name="cd_pause_button">Image for the pause button in the video player</string>
    <string name="cd_prev_button">Image for the previous button in the video player</string>
    <string name="cd_image_view_step">Image to display when there is no video available</string>
    <string name="cd_recipe_image">Image to display of the recipe listing</string>

    <!-- STEP DETAIL VIEW FRAGMENT STRINGS -->
    <string name="detail_step_pager_strip">STEP </string>

    <!-- INGREDIENT DETAIL FRAGMENT STRINGS -->
    <string name="detail_ingredients">%1$s %2$s of %3$s</string>
    <string name="detail_step_ingredients_card">INGREDIENTS LIST </string>
    <string name="detail_step_servings">Makes %1$d servings</string>

    <!-- STEP DETAIL FRAGMENT STRINGS -->
    <string name="detail_step_empty">Select a step from the list to view its detail</string>

    <!-- WIDGET STRINGS -->
    <string name="widget_empty_list">No recipes to view!</string>
    <string name="widget_configure">Select a recipe</string>
    <string name="widget_add">Add widget</string>

</resources>
