...

        <ImageButton android:id="@id/exo_prev"
            android:tint="@color/primary_dark"
            style="@style/ExoMediaButton.Previous"
            android:contentDescription="@string/cd_prev_button" />

        <ImageButton android:id="@id/exo_play"
            android:tint="@color/primary_dark"
            style="@style/ExoMediaButton.Play"
            android:contentDescription="@string/cd_play_button" />

        <ImageButton android:id="@id/exo_pause"
            android:tint="@color/primary_dark"
...
